# progpy

./: .gitignore  AgenteComWeb.ipynb  AgenteRAGEspecializado.py  GMM.ipynb  GMM_mistral_7b_chat_gratuito.ipynb  README.md  atualizarr.sh  cibmtr-logistic-regression-prediction.ipynb  classe_pessoa.py  clonezilla-lancamentos-2.py  contagem_vogais.py  converter_pdf.py  d1_padronizado.csv  d2_padronizado.csv  dados_unificados.csv  dataset_sintetico_padronizado.csv  desafio-aumento-salario.py  desafio.py  desafio2.py  desafio_set.py  main.py  output.csv  output1.csv  pdf_reader.py  pyproject.toml  requirements  requirements.txt  slicing.py  tarefa_emanoel.py  uci-dt-studentsperformanceprediction.ipynb
avamec/: .env.example  credencials.env  dados_cursistas.py  editar_usuarios.py  inscricao_usuario.py  main.py  midia_rec_turma_a.py  planilha_inscricao.ipynb  planilha_inscricao.py  prepara_planilha_inscricao.py  pyproject.toml  scraping.py  verfica_inscricao.py  verifica_inscricao.ipynb  verifica_inscricao.py
chat_deepseek/: chat_deepseek.py  main.py  pyproject.toml
cookies/: avamec_session.pkl
ida/: .gitignore  README.md  data.py  eda.py  main.py  models.py  oulad_atributos_selecionados.csv  output.csv  output.py  plots.py  prerequisite_issues.py  requirements.txt  sida.py
ida/src/: main.py
merge_datasets/: app.py
msg_whatsapp/: LEIA.ME  app.py  atts.xlsx  contatos.xlsx
pywhatkit/: PyWhatKit_DB.txt  main.py
tec_emergentes/: app.py  main_textblob.py  main_vader.py  venv.sh
udemy-data-science-course/: Untitled.ipynb  dict.py  elif.py  if.py  loop.py  tuple.py
(+63 files in other folders)
