[project]
name = "progpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "pdf2docx>=0.5.8",
]

[tool.uv.workspace]
members = [
    "avamec/webapp",
    "chat_deepseek",
    "avamec",
    "avamec/bot_whatsapp",
]
